<resources>
    <string name="app_name">SoundQuiz</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="play">Play</string>
    <string name="rules">Rules</string>
    <string name="choose_players">Set players list</string>
    <string name="nothing" translatable="false">nothing</string>
    <string name="title_activity_game" translatable="false">GameActivity</string>
    <string name="title_activity_rules" translatable="false">RulesActivity</string>
    <string name="add_player">Add player</string>
    <string name="add">Add</string>
    <string name="new_player_hint">New player\'s name</string>
    <string name="exist_player">Name is already occupied</string>
    <string name="transport">Transport</string>
    <string name="sport">Sport</string>
    <string name="professions">Professions</string>
    <string name="nature">Nature</string>
    <string name="current_player">Now choosing: %1$s</string>
    <string name="score" translatable="false">%1$d</string>
    <string name="stop">Stop</string>
    <string name="transport_words">cabriolet,buggy,tire service,fighter,ferry,parachute,titanic,helicopter,inflatable boat,speedboat,electric scooter,bicycle,scooter,balloon,subway,elevator,truck,skateboard,catamaran,carriage</string>
    <string name="sport_words">poker,billiards,tennis,hammer throwing,bobsleigh,biathlon,basketball,baseball,birpong,bowling,archery,golf,athletics,bodybuilding,programming,sumo,surfing,figure skating,chess,hobbyhorsing</string>
    <string name="professions_words">miner,blacksmith,cashier,fireman,programmer,accountant,croupier,sapper,judge,butcher,barber,bartender,security guard,woodcutter,demolition man,welder,DJ,gardener,cook,chemist</string>
    <string name="nature_words">hail,penguin,heat,beach,mountain river,dolphin,bonfire,childbirth,flood,swamp,waterfall,volcanic eruption,ant,eagle,avalanche,silence,ice,earthquake,exclusion zone,potato field</string>
    <string name="who_guess">Who guess the word?</string>
    <string name="nobody_guess">Nobody guess</string>
    <string name="lets_go">Let\'s GO!</string>
    <string name="name" translatable="false">%1$s</string>
    <string name="now_explain">Now explain:</string>
</resources>