<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue">

    <androidx.cardview.widget.CardView
        android:id="@+id/transport_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/sport_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_player_title"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/transport_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_blue"
            android:fontFamily="@font/baloo2_bold"
            android:gravity="center"
            android:text="@string/transport"
            android:textSize="34sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/sport_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/professions_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transport_card">

        <TextView
            android:id="@+id/sport_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_red"
            android:fontFamily="@font/baloo2_bold"
            android:gravity="center"
            android:text="@string/sport"
            android:textSize="34sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/professions_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/nature_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sport_card">

        <TextView
            android:id="@+id/professions_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_yellow"
            android:fontFamily="@font/baloo2_bold"
            android:gravity="center"
            android:text="@string/professions"
            android:textSize="34sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/nature_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/professions_card">

        <TextView
            android:id="@+id/nature_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_green"
            android:fontFamily="@font/baloo2_bold"
            android:gravity="center"
            android:text="@string/nature"
            android:textSize="34sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/current_player_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/baloo2_semibold"
        android:gravity="center"
        android:text="@string/current_player"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/transport_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/current_score_button"
        style="@style/button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/rules"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_info_details"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>