<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/soundquiz_background"
    android:hapticFeedbackEnabled="false"
    tools:context=".fragments.PlayersAddFragment"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-1dp">

    <Button
        android:id="@+id/add_player_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/reef"
        android:text="@string/add_player"
        android:textAllCaps="false"
        android:textSize="30sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/to_play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/players_list"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/choose_players_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/card_white"
        android:fontFamily="@font/reef"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/choose_players"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/players_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/card_dark_blue"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/add_player_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_players_title" />

    <Button
        android:id="@+id/to_play_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:enabled="false"
        android:fontFamily="@font/reef"
        android:text="@string/play"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_player_button" />

</androidx.constraintlayout.widget.ConstraintLayout>